Adds scripts and some documentation

--- a/configs/wraketti_defconfig
+++ b/configs/wraketti_defconfig
@@ -39,3 +39,7 @@ BR2_PACKAGE_OPENSSL=y
 
 BR2_PACKAGE_DNSMASQ=y
 BR2_PACKAGE_DNSMASQ_DHCP=y
+
+BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL)/board/asuuri/wraketti/rootfs_overlay/"
+BR2_TARGET_GENERIC_ROOT_PASSWD="Salakal4"
+BR2_SYSTEM_DHCP="eth0"
